--- a/lesson04/index.html
+++ b/lesson04/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script defer src="tasks.js"></script>
+    <script defer src="tasksHard_1.js"></script>
 </head>
 <body>
     
